--- a/brms-loan-application-on-openshift-pathway.json
+++ b/brms-loan-application-on-openshift-pathway.json
@@ -1,43 +1,15 @@
 {
-  "title": "Introduction to OpenShift For Developers",
+  "title": "BRMS Loan Application on OpenShift",
   "description": "",
   "paid": false,
   "courses": [
     {
-      "external_link": "https://learn.openshift.com/introduction/getting-started/",
-      "course_id": "getting-started",
-      "title": "Getting Started with OpenShift for Developers"
+      "course_id": "creating-a-rules-project",
+      "title": "Creating a rules project"
     },
     {
-      "external_link": "https://learn.openshift.com/introduction/cluster-access/",
-      "course_id": "cluster-access",
-      "title": "Logging in to an OpenShift Cluster"
-    },
-    {
-      "external_link": "https://learn.openshift.com/introduction/deploying-images/",
-      "course_id": "deploying-images",
-      "title": "Deploying Applications From Images"
-    },
-    {
-      "external_link": "https://learn.openshift.com/introduction/deploying-python/",
-      "course_id": "deploying-python",
-      "title": "Deploying Applications From Source"
-    },
-    {
-      "external_link": "https://learn.openshift.com/introduction/resource-objects/",
-      "course_id": "resource-objects",
-      "title": "Using the CLI to Manage Resource Objects"
-    },
-    {
-      "external_link": "https://learn.openshift.com/introduction/port-forwarding/",
-      "course_id": "port-forwarding",
-      "title": "Connecting to a Database Using Port Forwarding"
-    },
-    {
-      "external_link": "http://learn.openshift.com/katacoda-introduction/fis-deploy-app",
-      "course_id": "fis-deploy-app",
-      "title": "Getting started with Fuse",
-      "description": ""
+      "course_id": "domain-model",
+      "title": "Creatin the Domain Model"
     }
   ]
 }
