--- a/brms-loan-application-on-openshift-pathway.json
+++ b/brms-loan-application-on-openshift-pathway.json
@@ -9,7 +9,7 @@
     },
     {
       "course_id": "domain-model",
-      "title": "Creatin the Domain Model"
+      "title": "Creating the Domain Model"
     }
   ]
 }
